src/App.css
body{
  font-size: 14px;
  /* cursor:pointer; */
  font-family:Arial, Helvetica, sans-serif;
}
body a{
  cursor:pointer;
}
.h5, h5 {
  font-size: 1.15rem;
}
iframe .bitech_storypage_header_wrapper{
  display:none !important;
}
.report_panel .tab_btn{
  cursor:pointer;
}
.error{
  color:red;
  font-weight:bold;
  font-size:20px;
}

.hide_panel_dwn{
 
    /* border: 1px solid RED; */
    height: 50px;
    position: relative;
    top: -70px;
    /* z-index: 99999; */
    background: #fff;
    bottom: 0;
    width: 100%;

}
.tab_btn{
  padding:6px 1rem;
  border: 1px solid #ddd;
  border-left: 1px solid transparent;
  border-right: 1px solid transparent;
  border-bottom: 1px solid transparent;
}
.App .tab_btn:hover, .tab_btn:active{
  background: #f2a006 !important;
  border:1px solid #f2a006 !important;
  color:#fff;
}
.report_panel .btn-default{
  background: transparent;
  color:#000;
  border:transparent;
  border-left: 1px solid #ddd;
  border-right: 1px solid #ddd;
}
img {
  max-width: 100%;
  max-height:200px;
}
.imgHomeBanner {
  max-width: 100%;
  max-height:400px!important;
}
.mt-30{
  margin-top:30px;
}
.form-control{
  font-size: 14px;
}
.btn-primary{
  background: #f2a006 !important;
  border-color: #f2a006 !important;
}
.bitech-report-presentation-mode .bi_reporttoolbar_container  {
  display:none !important;
}
.bi_inlinetoolbar_innercontainer{
  display: none !important;
}
iframe{
  border:1px solid #ddd;
}
.btn-primary:hover, .btn-primary:focus, .btn-primary:active, .btn-primary:visited{
  background: #ce8806 !important;
  border-color: #ce8806 !important;  
}
.btn-default:hover, .btn-default:focus, .btn-default:active, .btn-default:visited{
  background: #ce8806 !important;
  border-color: #ce8806 !important; 
  color:#fff; 
}
.navbar-brand img{
  height: 60px;;
}
.navbar{
  position: absolute;
  /* top: 10px; */
  z-index: 1;
  width: 100%;
  background:rgba(0,0,0,0.46);
}
.carouselCover img{
  width: 100%;
  /* max-height: 300px; */
}
.posAbs{
  position:absolute;
}
#bottomPanel{
    height: 57px;
    margin-top: 139px;
    width: 98%;
    margin-right: 0;
    float: right;
    z-index: 0;
    background: #fff;
    margin-left: 0;
    border-bottom: 1px solid #eee;
}
.posAbs a{
  color:orange;
  margin-right:20px;
}
.BodyContainer{position: relative;margin-bottom:10%;}
.detailImg .carousel-item{
  max-height: 62px !important;
}
.carousel-caption{
  left: 1%;
  right: 0;
  z-index:0 !important;
}
.navbar-light .navbar-nav .nav-link {
  color: rgba(255,255,255,.7);
  text-transform: uppercase;
  border-bottom: 3px solid transparent;
  margin-left:10px;
}
.navbar-light .navbar-nav .nav-link:hover,.navbar-light .navbar-nav .nav-link:focus,.navbar-light .navbar-nav .nav-link:active, .navbar-light .navbar-nav .nav-link.active  {
  border-bottom: 3px solid #fff;
  color:#fff;
}
.navbar-light .navbar-brand {
  color: rgba(255,255,255);
  margin: 0px;
  padding: 0;
}
.navbar-light .navbar-nav .nav-link:hover {
  color: rgba(255,255,255);
}
.countStyl{
  font-size: 35px;
  color: #ff0202;
}
.colY{
  color:#f2a006;
}
.hide{
  display:none !important;
}

.flex{
  display: flex;
  align-items: center;
}
/*Create asset*/
.title {
  font-size: 20px;
  z-index: 1;
  color:#f2a006;
  font-weight:bold;
  margin-bottom:10px;
}
.title .nowrap {white-space: nowrap;}

.title .titleLine {
	background-color: #f2a006;
	height: 1px;
  margin-left:15px;
  width: 100%;
}

.form-group input, .form-group select{
  border-top: transparent;
  border-left: transparent;
  border-right: transparent;
  border-radius:0;
  padding-left:0;
}
.stickyButtonFooter{
  width: 100%;
  /*position: fixed;* commented to align the button at center and to place at the end of page*/
  bottom: 33px;
  background: #fff;
}
file {
border:transparent !important;
}
.form-label{
  font-weight:bold;
}
.form-group{
  margin-top: 8px;
  margin-bottom:8px;
}
label {
  cursor: pointer;
}
sup {
 
  color: RED;
}
/* #upload-cover-photo ,#upload-cover-video, #notionalArchtechure {
  opacity: 0;
  position: absolute;
  z-index: -1;
} */
.Heading{
  font-weight:bold;
  font-size:20px;
}
.mb20{
  margin:20px auto;
}
.justify{
  justify-content: space-between;
}
.createLink{
  position: absolute;
  right: 15px;
  top: -70px;
}
.info{
  color:green;
}
.CreateAsset{
  background:#f2a006;
  color:#fff !important;
  padding:4px 8px;
  border-radius:4px;
  border:1px solid transparent;
}
.modal-header{
  background:#f2a006;
  color:#FFF;
  padding:8px;
}
.hide_panel{
  height: 40px;
  margin-top: 120px;
  width: 98%;
  margin-right: 0;
  float: right;
  position: absolute;
  z-index: 0;
  /* background: #fff; */
  /* border: 1px solid; */
  margin-left: 4px;
}
.bRightContainer{
  width: 50% !important; 
  display: block !important; 
  margin-top: 55px !important; 
  font-weight:400 !important;
  font-family: Arial Helvetica, sans-serif !important ;
}
.vRightContP{
  display: flex;float: right;font-weight:400;margin-right: 50px; font-family: Arial, Helvetica, sans-serif;
}
.innerSec{
  margin: 10px;font-weight:400;font-family: Arial, Helvetica, sans-serif;
}
.innersec  .btn{
  font-size:12px !important;border-radius: 12px !important;background-color: #F3921F !important;
}
.subsec{
  font-weight:400;color:rgb(194, 194, 194) !important;font-family: Arial, Helvetica, sans-serif;
}
/* #Loader{
  position: fixed;
  z-index: 1051;
  width: 100%;
  height: 100%;
  top: 0px;
  left: 0px;
} */
#header-container{
  visibility:hidden;
}
.scroll{
  overflow-y: scroll;
  height: 400px;
}
.editPanel{
  display:block;
  margin-top:16px;
}
.createPanel{
  display:none;
}
.clearall {
  margin-top: 5px;
  font-size: 13px;
  float:right;
}
.mt10{
  margin-top:15px !important;
}
.detailImg{
  /* max-height: 105px !important; */
}
.statusBar{
  display:flex;
  align-items:center;
}

.statusBar hr{
  width:100%;
}
.rightSection img{
  width:34px;
}
.rightSection .rounded-circle{
  /* width:40px;
  height:40px; */
  /* border:1px solid #ccc; */
}
/* ... */

